[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Minimap.gd" type="Script" id=1]
[ext_resource path="res://Buildings/town_center_3.png" type="Texture" id=2]
[ext_resource path="res://UI/steak.png" type="Texture" id=3]
[ext_resource path="res://Worker/Idle/front/1.png" type="Texture" id=4]
[ext_resource path="res://UI/TexturesCom_Grass0026_4_S.jpg" type="Texture" id=5]
[ext_resource path="res://UI/gold.png" type="Texture" id=6]
[ext_resource path="res://UI/wood.png" type="Texture" id=7]
[ext_resource path="res://UI/TexturesCom_ConcreteBare0279_1_M.jpg" type="Texture" id=8]
[ext_resource path="res://World/ground_tile.png" type="Texture" id=9]

[node name="Minimap" type="MarginContainer"]
margin_right = 320.0
margin_bottom = 320.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="NinePatchRect" parent="."]
margin_right = 320.0
margin_bottom = 320.0
texture = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 320.0
margin_bottom = 320.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Grid" type="TextureRect" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 310.0
texture = ExtResource( 5 )
expand = true

[node name="Settlement_Marker" type="Sprite" parent="MarginContainer/Grid"]
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 2 )

[node name="Worker_Marker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
position = Vector2( 19.3926, 14.8293 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 4 )

[node name="Alert_Marker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
position = Vector2( 0, -0.612722 )
scale = Vector2( 0.001, 0.001 )
texture = ExtResource( 3 )

[node name="Gold_Marker" type="Sprite" parent="MarginContainer/Grid"]
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 6 )

[node name="Wood_Marker" type="Sprite" parent="MarginContainer/Grid"]
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 7 )

[node name="Path_marker" type="Sprite" parent="MarginContainer/Grid"]
texture = ExtResource( 9 )
